# arrowindex-db

./: CMakeLists.txt
CMake/Modules/: FindLibusb.cmake
rust/: .gitignore  CMakeLists.txt  Cargo.toml
rust/migrations/2023-11-15-221003_init_db/: down.sql  up.sql
rust/migrations/2024-01-27-235132_add_tags/: down.sql  up.sql
rust/src/: lib.rs  models.rs  schema.rs
src/: ArrowIndex.cpp  ArrowIndex.h  CMakeLists.txt  SongManager.cpp  SongManager.h  StepMania.cpp
