[package]
name = "arrowindex-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0"

# might need more diesel features packaged in here: "postgres", "mysql"
diesel = { version = "2.1.1", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }

[build-dependencies]
cxx-build = "1.0"